# m5_forcasting

./: .gitignore
01-training/: README.md  config.py  main.py  metrics.py  model.py  param_tunning.py  pipeline.py  prefect.yaml  pyproject.toml  requirements.txt
01-training/tests/: test_data_loader.py  test_metrics.py
src/: data_loader.py  feature_engineering.py  pipeline.py
tests/: test_feature_engineering.py  test_model.py  test_pipeline.py
