[project]
name = "01-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "lightgbm>=4.6.0",
    "mlflow>=2.22.1",
    "numpy>=2.3.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "prefect>=3.4.5",
    "pytest>=8.4.0",
    "scikit-learn>=1.7.0",
    "setuptools>=80.9.0",
]
